feat: Add Box2D compatibility tests and enhance mobile optimization

--- a/index.html
+++ b/index.html
@@ -180,16 +180,16 @@
             document.head.appendChild(primaryScript);
         }
         loadBox2D();
-    </script>
-    
-    <!-- Game Scripts -->
+    </script>    <!-- Game Scripts -->
+    <script src="js/utility.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/customization.js"></script>
     <script src="js/physics.js"></script>
     <script src="js/game.js"></script>
     <script src="js/main.js"></script>
-    <!-- Test Script (for testing purposes only) -->
+    <!-- Test Scripts -->
     <script src="js/test.js"></script>
+    <script src="js/box2d-test.js"></script>
     <!-- Mobile Testing (for testing purposes only) -->
     <script src="js/mobile-test.js"></script>
 </body>
